# genefoundry-router

./: .dockerignore  .env.dev  .env.docker.example  .env.example  .gitignore  .loc-allowlist  .pre-commit-config.yaml  .review-rollup.md  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  Makefile  README.md  container-release.json  fleet-metadata.yaml  pyproject.toml  server.json  servers.dev.yaml  servers.yaml
.github/: dependabot.yml
.github/workflows/: _container-ci.yml  _container-release.yml  ci.yml  container-ci.yml  container-release.yml  container-security.yml  control-audit.yml  drift.yml  fleet-probe.yml  mcp-registry.yml  release-alias.yml
ci/: container-controls.json  data-identity-rollout-v1.json  fleet-application-releases.json  fleet-baseline.json  fleet-urls.env  http-policy-v1.json  release-candidate-fleet.json  release-candidate-inventory.json
docker/: .env.patient-data.example  Dockerfile  docker-compose.dev.yml  docker-compose.npm.yml  docker-compose.prod.yml  docker-compose.yml
docs/: CONTAINER-HARDENING-STANDARD-v1.md  HTTP-POLICY-STANDARD-v1.md  MCP-BEHAVIOUR-STANDARD-v1.md  MCP-TRANSPORT-STANDARD-v1.md  README-STANDARD-v1.md  REPO-METADATA-STANDARD-v1.md  RESPONSE-ENVELOPE-STANDARD-v1.1.md  RESPONSE-ENVELOPE-STANDARD-v1.md  SECURITY-ASSESSMENT-2026-06-29.md  TOOL-NAMING-STANDARD-v1.md  TOOL-SCHEMA-DOCUMENTATION-STANDARD-v1.md  TOOL-SURFACE-BUDGET-STANDARD-v1.md  VERSIONING-STANDARD-v1.md  configuration.md  deployment.md  discovery.md
docs/conformance/: behaviour.py  conformance.yml  runtime_data_identity.py  test_behaviour_v1.py  untrusted-text-inventory.yml
docs/plans/: 2026-06-13-fleet-logging-cli-standard-implementation.md  2026-06-13-genefoundry-router-implementation.md  2026-06-16-fake-fleet-implementation.md  2026-06-29-mcp-transport-and-session-standard.md  2026-06-30-drift-detection-ci-implementation.md  2026-07-06-security-hardening-fixes-implementation.md  2026-07-07-fleet-security-remediation.md  2026-07-10-dependencies-genereviews-releases.md  2026-07-10-fleet-execution-ledger.md  2026-07-10-fleet-modernization-reconciliation.md  2026-07-10-fleet-security-modernization.md  2026-07-10-ingest-artifact-hardening.md  2026-07-10-p0-policy-boundaries.md  2026-07-10-router-transport-drift-fencing.md  2026-07-11-error-message-sanitation-fleet-sweep.md  2026-07-11-fastmcp-notfound-reflection-guard.md  2026-07-11-untrusted-content-fencing-fleet-adoption.md  2026-07-12-fleet-branch-triage-ledger.md  2026-07-12-fleet-branch-triage.md  2026-07-14-fleet-findability-rollout.md  2026-07-16-fleet-current-state-release-implementation.md  2026-07-16-oauth-session-ux.md  V1.0-GATE.md
docs/specs/: 2026-06-13-fleet-logging-cli-standard-design.md  2026-06-13-genefoundry-router-design.md  2026-06-16-fake-fleet-local-testing-design.md  2026-06-16-router-agentic-ergonomics-design.md  2026-06-29-drift-detection-ci-design.md  2026-06-29-mcp-transport-and-session-standard-design.md  2026-06-30-fleet-remediation-design.md  2026-07-06-fleet-agent-skills-design.md  2026-07-06-security-hardening-fixes-design.md  2026-07-07-fleet-security-remediation-design.md  2026-07-16-oauth-session-ux-design.md  (+9 more)
genefoundry_router/: __init__.py  auth.py  authorization.py  catalog.py  cli.py  composition.py  config.py  conformance.py  discovery.py  drift.py  exceptions.py  hints.py  instructions.py  limits.py  normalization.py  notfound_guard.py  observability.py  registry.py  runtime_drift.py  security.py  server.py  tool_search.py
scripts/: audit_container_controls.py  check_file_size.py  check_fleet_metadata.py  check_readme.py  check_tool_surface.py  container_release.py  discoverability_report.py  gen_citation_cff.py  gen_readme_inventory.py  gen_server_json.py  make_release_candidate.py  mcp_probe.py  mcp_survey.py  snapshot_catalog.py  snapshot_fleet.py  surface.py  sync_fleet_metadata.py
(+232 files in other folders)
